syntax = "proto3";

import "size.proto";

package frame.proto;

// Float vector (support both vecX type and matX type).
// size -> type
// 2    -> vec2
// Next 3
message UniformVector2 {
	float x = 1;
	float y = 2;
}

// 3    -> vec3
// Next 4
message UniformVector3 {
	float x = 1;
	float y = 2;
	float z = 3;
}

// 4    -> vec4
// Next 5
message UniformVector4 {
	float x = 1;
	float y = 2;
	float z = 3;
	float w = 4;
}

// 16   -> mat4
// Next 17
message UniformMatrix4 {
	float m11 = 1;
	float m12 = 2;
	float m13 = 3;
	float m14 = 4;

	float m21 = 5;
	float m22 = 6;
	float m23 = 7;
	float m24 = 8;

	float m31 = 9;
	float m32 = 10;
	float m33 = 11;
	float m34 = 12;

	float m41 = 13;
	float m42 = 14;
	float m43 = 15;
	float m44 = 16;
}

// Next 2
message UniformInts {
	repeated int32 values = 1;
	Size size = 2;
}

// Next 2
message UniformFloats {
	repeated float values = 1;
	Size size = 2;
}

// Next 2
message UniformMatrix4s {
	repeated UniformMatrix4 values = 1;
}
